--- a/raw/debouncer.html
+++ b/raw/debouncer.html
@@ -6,10 +6,20 @@
 	<title>Debouncer</title>
 <!--Adobe Edge Runtime-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <script type="text/javascript" charset="utf-8" src="debouncer_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/edge.5.0.0.min.js"></script>
     <style>
         .edgeLoad-EDGE-112562383 { visibility:hidden; }
     </style>
+<script>
+   AdobeEdge.loadComposition('debouncer', 'EDGE-112562383', {
+    scaleToFit: "width",
+    centerStage: "none",
+    minW: "0",
+    maxW: "undefined",
+    width: "540",
+    height: "190"
+}, {"dom":[]}, {"dom":[]});
+</script>
 <!--Adobe Edge Runtime End-->
 
 </head>
