--- a/raw/buffer.html
+++ b/raw/buffer.html
@@ -3,18 +3,28 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-	<title>Untitled</title>
+	<title>Debouncer</title>
 <!--Adobe Edge Runtime-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <script type="text/javascript" charset="utf-8" src="buffer_edgePreload.js"></script>
+    <script type="text/javascript" charset="utf-8" src="edge_includes/edge.5.0.0.min.js"></script>
     <style>
-        .edgeLoad-EDGE-116087028 { visibility:hidden; }
+        .edgeLoad-EDGE-112562383 { visibility:hidden; }
     </style>
+<script>
+   AdobeEdge.loadComposition('buffer', 'EDGE-112562383', {
+    scaleToFit: "width",
+    centerStage: "none",
+    minW: "0",
+    maxW: "undefined",
+    width: "540",
+    height: "190"
+}, {"dom":[]}, {"dom":[]});
+</script>
 <!--Adobe Edge Runtime End-->
 
 </head>
 <body style="margin:0;padding:0;">
-	<div id="Stage" class="EDGE-116087028">
+	<div id="Stage" class="EDGE-112562383">
 	</div>
 </body>
 </html>
